public class EndNode : DialogueNode
{
    public EndNode() : base(new string[0]) { }
}
